--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
           </svg>
         </div>
         <h1 style="font-size: x-large">Reviewers</h1>
-        <p style="font-size: small; line-height: 20px">
+        <p
+          style="
+            font-size: small;
+            line-height: 25px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+          "
+        >
           Reviewers is where people can access guidelines, checklists, and other
           tools to assist them in reviewing papers or manuscripts. It provides a
           structured approach to ensure that the review process is thorough,
